--- a/data/projects.json
+++ b/data/projects.json
@@ -15,6 +15,6 @@
   "desc": "Quality education for Classes 6 to 10 with focus on conceptual clarity, disciplined learning, and academic excellence. Join Enlight Coaching Centre today.",
   "github": "https://github.com/tawhid012",
   "live": "https://enlightcoaching.netlify.app",
-  "image": "https://github.com/tawhid012/Enlight"
-},
+  "image": "https://i.ibb.co/q3C2mCT8/1-1.png"
+}
 ]
