Update project images in projects.json

--- a/data/projects.json
+++ b/data/projects.json
@@ -6,7 +6,7 @@
     "desc": "A premium education platform for students in Hailakandi, Assam. Features specialized prep modules for CBSE, ASSEB, and JNVST entrance exams with a focus on high-speed performance.",
     "github": "https://github.com/tawhid012/StudyFreaks",
     "live": "https://studyfreaks.netlify.app",
-    "image": "https://i.ibb.co/Rk7RFPbS/1-1.jpg"
+    "image": "https://iili.io/qqEQLW7.jpg"
   },
   {
   "id": 1772387879995,
@@ -15,6 +15,6 @@
   "desc": "Quality education for Classes 6 to 10 with focus on conceptual clarity, disciplined learning, and academic excellence. Join Enlight Coaching Centre today.",
   "github": "https://github.com/tawhid012",
   "live": "https://enlightcoaching.netlify.app",
-  "image": "https://i.ibb.co/q3C2mCT8/1-1.png"
+  "image": "https://iili.io/qqELN6u.md.png"
 }
 ]
